# mobile_robot_description

./: CMakeLists.txt  README.md  package.xml
config/: back_wheel.yaml  base.yaml  front_wheel.yaml  quimera.rviz  wheel.yaml
config/diffbot/: base.yaml  caster_wheel.yaml  front_wheel.yaml  motor.yaml
config/mobile_robot/: back_wheel.yaml  base.yaml  front_wheel.yaml
config/quimera/: back_wheel.yaml  base.yaml  front_wheel.yaml
config/quimera_robot/: back_wheel.yaml
launch/: mobile_robot_gazebo.launch  mobile_robot_rviz.launch  quimera_robot_rviz.launch  quimera_rviz.launch  spawn_mobile_robot.launch.py
meshes/: quimera_struct.dae  wheel.dae
meshes/diffbot/: wheel.stl
meshes/quimera_robot/: wheel_2.dae
rviz/: quimera_robot.rviz  view_robot.rviz
urdf/: common_macro.xacro  diffbot.urdf.xacro  mobile_robot.urdf.xacro  model_test.urdf.xacro  quimera.urdf.xacro  quimera_robot.gazebo.xacro  quimera_robot.urdf.xacro
urdf/include/: common_macros.urdf.xacro  common_sensors.xacro
