<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot_description</name>
  <version>0.0.0</version>
  <description>The mobile_robot_description package</description>

  <maintainer email="pxalcantara@gmail.com">root</maintainer>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
